Link preview bug fix for LI on safari

--- a/client/src/components/LinkPreview/style.css
+++ b/client/src/components/LinkPreview/style.css
@@ -10,3 +10,7 @@
   background-size: cover;
   overflow: hidden;
 }
+[contenteditable] {
+  -webkit-user-select: text;
+  user-select: text;
+}
